--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
 </head>
 <body>
 
-<h1>Hello</h1>
-<p></p>
+  <h1>Git Repository is moved.</h1>
+  <h3>Redirect to the new page(https://karl-park.github.io)</h3>
 
-<script>
-  setTimeout(function() {
-    console.log("time is ready")
-  }, 1000);
-</script>
+  <script>
+    setTimeout(function() {
+      var fullUrl = window.location.href;
+      var domain = window.location.origin;
+      var pathWithParamAndQuery = fullUrl.slice(domain.length)
+      window.location.replace(`https://karl-park.github.io${pathWithParamAndQuery}`);
+    }, 1000);
+  </script>
 
 </body>
 </html>
